[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpdconfig"
version = "1.0.0"
authors = [
  {name = "James Churchill", email = "pelrun@gmail.com"},
]
description = "Configuration tool for GPD Win devices"
readme = "README.md"
dependencies = ["hid>=1.0.5"]
keywords = ["gpd", "wincontrols"]
license = {file = "COPYING"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
[project.urls]
Homepage = "https://github.com/pelrun/pyWinControls"
Repository = "https://github.com/pelrun/pyWinControls.git"
"Bug Tracker" = "https://github.com/pelrun/pyWinControls/issues"

[project.scripts]
gpdconfig = "gpdconfig.app:main"
